--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Supabase for authentication and database
+  supabase_flutter: ^2.5.6
+  
+  # Maps integration (works on both iOS and Android)
+  google_maps_flutter: ^2.5.3
+  
+  # Location services
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  
+  # State management
+  provider: ^6.1.2
+  
+  # Local storage
+  shared_preferences: ^2.2.2
+  
+  # HTTP requests
+  http: ^1.2.0
+  
+  # Image handling
+  image_picker: ^1.0.7
+  
+  # Animations
+  animations: ^2.0.11
+  
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +84,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
