--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
   lottie: ^3.1.2
   # Supabase authentication
   supabase_flutter: ^2.5.6
+  # OpenStreetMap integration (free, no API key required)
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  # Location services
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
