--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
   # Location services
   geolocator: ^13.0.1
   geocoding: ^4.0.0
+  # Google Maps Flutter plugin (native maps on iOS/Android)
+  google_maps_flutter: ^2.4.0
+  shared_preferences: ^2.1.1
+  # Stripe SDK for Flutter (UI + native payments). See README and platform setup notes before enabling.
+  flutter_stripe: ^9.0.0
 
 dev_dependencies:
   flutter_test:
