--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,20 +41,20 @@ flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/icons/New App Icon.png"
+  image_path: "assets/icons/logo.png"
   min_sdk_android: 21
   web:
     generate: true
-    image_path: "assets/icons/New App Icon.png"
-    background_color: "#0175C2"
-    theme_color: "#0175C2"
+    image_path: "assets/icons/logo.png"
+    background_color: "#FF1493"
+    theme_color: "#FF1493"
   windows:
     generate: true
-    image_path: "assets/icons/New App Icon.png"
+    image_path: "assets/icons/logo.png"
     icon_size: 48
   macos:
     generate: true
-    image_path: "assets/icons/New App Icon.png"
+    image_path: "assets/icons/logo.png"
 
 flutter:
   uses-material-design: true
